# NetCrypt

./: CMakeLists.txt  InsecureTansmission.cpp  JpsNet.h  JpsNet.kdev4  LICENSE  NetCrypt.h  NetCrypt.kdev4  Progress.h  README.md  SecureTransmission.cpp  SymmetricEncryption.cpp  SymmetricEncryption.h  ToDo  Transmission.cpp  main.cpp  main_options.cpp
include/: CmdlineOptions.h  NetCrypt.h  Progress.h  SymmetricEncryption.h  Transmission.h
src/: SecureTransmission.cpp  main.cpp  main_options.cpp
